@@ -11,6 +11,8 @@
 - Added ability to change compatibility settings such as "Run as Administrator", "Compatibility Mode: Windows XP SP2" and "HDPI Aware" for the game (only for Soulstorm for now)
 - Added ability to see all your System Power Settings
 - Added ability to unlock "Ultimate Performance" power plan
+- Added ability to disable fullscreen optimizations in Compatibity tabs
+- Compatibility Setting are supporting all DoW versions
 
 ## Version 1.8.2:
 
